<resources>
    <string name="app_name">D1_OPENLOG</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="openlog">OPENLOG</string>
    <string name="login">Login</string>
    <string name="køn">Køn</string>
    <string name="fødselsdag">Fødselsdag</string>
    <string name="profil">PROFIL</string>
    <string name="blodsukker">Blodsukker</string>
    <string name="kulhydrater">Kulhydrater</string>
    <string name="insulin">Insulin</string>
    <string name="opret_bruger">OPRET BRUGER</string>
    <string name="min_profil">MIN PROFIL</string>
    <string name="brugernavn">BRUGERNAVN</string>
    <string name="adgangskode">Adgangskode</string>
    <string name="k_n">KØN</string>
    <string name="anton">ANTON</string>
    <string name="opret_profil">OPRET PROFIL</string>
    <string name="email">E-mail</string>
    <string name="f_dselsdag">FØDSELSDAG</string>
    <string name="nuv_rende_adgangskode">NUVÆRENDE ADGANGSKODE</string>
    <string name="hilsen">Godt at se dig %s</string>
    <string name="genderDisplay">%s</string>
    <string name="nameDisplay">%s</string>
    <string name="ageDisplay">%s</string>
    <string name="navn">Navn</string>
    <string name="historik">HISTORIK</string>
    <string name="speak">Button</string>
    <string name="name">Name</string>
    <string name="inputText">%s</string>
    <string name="DEL">DEL</string>
    <string name="dropdown">Dropdown</string>
    <string name="textview">TextView</string>
    <string name="todo">TODO</string>
    <string name="alder">Alder</string>
    <string name="INFO">INFO</string>
    <string name="logdata">logData</string>

    <string-array name="Køn">
        <item>Dreng</item>
        <item>Pige</item>
        <item>Andet</item>
    </string-array>

</resources>